done all authentication rotue & send email by sendGrid & handlebars
