# src/app/modules/auth/auth.controller.ts
@@ -3,6 +3,7 @@ import httpStatus from 'http-status';
 import catchAsync from '../../utils/catchAsync';
 import { sendApiResponse } from '../../utils/sendApiResponse';
 import { setRefreshTokenInCookie } from './auth.utils';
+import AppError from '../../errors/AppError';
 
 const userRegistration = catchAsync(async (req, res) => {
   const {
@@ -28,15 +29,15 @@ const userRegistration = catchAsync(async (req, res) => {
   });
 });
 
-const createAdminByAdmin = catchAsync(async (req, res) => {
-  const payload = await AuthServices.createAdminByAdminIntoDB(req.body);
+// const createAdminByAdmin = catchAsync(async (req, res) => {
+//   const payload = await AuthServices.createAdminByAdminIntoDB(req.body);
 
-  sendApiResponse(res, {
-    statusCode: httpStatus.CREATED,
-    message: `Admin registered successfully`,
-    payload,
-  });
-});
+//   sendApiResponse(res, {
+//     statusCode: httpStatus.CREATED,
+//     message: `Admin registered successfully`,
+//     payload,
+//   });
+// });
 
 const login = catchAsync(async (req, res) => {
   const {
@@ -45,6 +46,7 @@ const login = catchAsync(async (req, res) => {
     user: payload,
   } = await AuthServices.login(req.body);
 
+  // Set refresh token in cookie
   setRefreshTokenInCookie(res, refreshToken);
 
   sendApiResponse(res, {
@@ -55,14 +57,53 @@ const login = catchAsync(async (req, res) => {
   });
 });
 
-const refreshToken = catchAsync(async (req, res) => {
-  const refreshToken = req.cookies.refreshToken;
-
-  const { accessToken } = await AuthServices.refreshToken(refreshToken);
+// change password of user by user token
+const changePassword = catchAsync(async (req, res) => {
+  await AuthServices.changePasswordIntoDB(req.body, req.user!.email);
 
   sendApiResponse(res, {
     statusCode: httpStatus.OK,
-    message: `Access token retrieved successfully`,
+    message: `Password changed successfully`,
+    payload: null,
+  });
+});
+
+// forget password
+const forgetPassword = catchAsync(async (req, res) => {
+  await AuthServices.forgetPassword(req.body);
+
+  sendApiResponse(res, {
+    statusCode: httpStatus.OK,
+    message: `We’ve sent you an email with instructions to reset your password`,
+    payload: null,
+  });
+});
+
+// reset password
+const resetPassword = catchAsync(async (req, res) => {
+  const { token } = req.params;
+
+  if (!token) {
+    throw new AppError(httpStatus.BAD_REQUEST, 'Reset token is required');
+  }
+
+  await AuthServices.resetPasswordIntoDB(req.body.password, token);
+
+  sendApiResponse(res, {
+    statusCode: httpStatus.OK,
+    message: `Password has been successfully reset.`,
+    payload: null,
+  });
+});
+
+const refreshToken = catchAsync(async (req, res) => {
+  const refreshToken = req.cookies.refreshToken;
+
+  const accessToken = await AuthServices.refreshToken(refreshToken);
+
+  sendApiResponse(res, {
+    statusCode: httpStatus.OK,
+    message: `New access token retrieved successfully`,
     accessToken: accessToken,
     payload: null,
   });
@@ -70,7 +111,9 @@ const refreshToken = catchAsync(async (req, res) => {
 
 export const AuthControllers = {
   userRegistration,
-  createAdminByAdmin,
   login,
+  changePassword,
+  forgetPassword,
+  resetPassword,
   refreshToken,
 };
