# src/app/modules/auth/auth.route.ts
@@ -2,6 +2,8 @@ import { Router } from 'express';
 import { AuthControllers } from './auth.controller';
 import ValidateRequest from '../../middleware/validateRequest';
 import { AuthValidations } from './auth.validation';
+import auth from '../../middleware/auth';
+import { USER_ROLE } from '../user/user.constant';
 
 const router = Router();
 
@@ -11,16 +13,35 @@ router.post(
   AuthControllers.userRegistration,
 );
 
-// router.post(
-//   '/login',
-//   ValidateRequest(AuthValidations.loginValidationSchema),
-//   AuthControllers.login,
-// );
+router.post(
+  '/login',
+  ValidateRequest(AuthValidations.loginValidationSchema),
+  AuthControllers.login,
+);
 
-// router.post(
-//   '/refresh-token',
-//   ValidateRequest(AuthValidations.refreshTokenValidationSchema),
-//   AuthControllers.refreshToken,
-// );
+router.post(
+  '/change-password',
+  ValidateRequest(AuthValidations.changePasswordValidationSchema),
+  auth(USER_ROLE.user, USER_ROLE.admin, USER_ROLE.superAdmin),
+  AuthControllers.changePassword,
+);
+
+router.post(
+  '/forget-password',
+  ValidateRequest(AuthValidations.forgetPasswordValidationSchema),
+  AuthControllers.forgetPassword,
+);
+
+router.post(
+  '/reset-password/:token',
+  ValidateRequest(AuthValidations.resetPasswordValidationSchema),
+  AuthControllers.resetPassword,
+);
+
+router.post(
+  '/refresh',
+  ValidateRequest(AuthValidations.refreshTokenValidationSchema),
+  AuthControllers.refreshToken,
+);
 
 export const AuthRoutes = router;
